hubSide/force-app/main/default/objects/User/fields/BusinessProfile__c.field-meta.xml
<CustomField>
    <fullName>BusinessProfile__c</fullName>
    <description>Profil métier - User&apos;s business profile</description>
    <label>Profil métier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UserBusinessProfile</valueSetName>
    </valueSet>
</CustomField>