hubSide/force-app/main/default/objects/User/fields/Distributeur_de_reference__c.field-meta.xml
<CustomField>
    <fullName>Distributeur_de_reference__c</fullName>
    <description>ID ( SFDC 15 caractères ) du distributeur pour lequel travaille l&apos;employé</description>
    <label>Distributeur de reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>