hubSide/force-app/main/default/objects/User/fields/Duplicate_flag__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permet de savoir si l&apos;utilisateur est un potentiel doublon d&apos;un utilisateur déjà créé.</description>
    <label>Duplicate flag</label>
    <type>Checkbox</type>
</CustomField>