hubSide/force-app/main/default/objects/User/fields/Montant_approbation__c.field-meta.xml
<CustomField>
    <fullName>Montant_approbation__c</fullName>
    <label>Montant approbation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>