hubSide/force-app/main/default/objects/User/fields/Nom_Distributeur_reference__c.field-meta.xml
<CustomField>
    <fullName>Nom_Distributeur_reference__c</fullName>
    <label>Nom Distributeur référence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>