hubSide/force-app/main/default/objects/User/listViews/Location.listView-meta.xml
<ListView>
    <fullName>Location</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Distributeur_de_reference__c</field>
        <operation>equals</operation>
        <value>0013N00000Q6AAMQA3</value>
    </filters>
    <label>Location</label>
    <language>en_US</language>
</ListView>